# versionStringCompare

./: CMakeLists.txt  README.md
extlib/WIN64/lib/: libboost_zlib-vc80-mt-1_53.lib  libboost_zlib-vc80-mt-gd-1_53.lib
src/: main.cpp  ver_string_comparison.cpp  ver_string_comparison.hpp
